# Aegis

./: .aegis_config.yaml  .gitignore  ACKNOWLEDGEMENTS.md  pyproject.toml
configs/: single_model.yaml
docs/: cli.md  configuration.md
examples/: broadcast_aggregators.py  broadcast_mpi.py
src/aegis/: __init__.py  cli.py  config.py  heartbeat.py  launcher.py  scheduler.py
src/aegis/templates/: instance.sh.j2  pbs_job.sh.j2
tests/: test_bigscale_fixes.py
tools/: vllm_build_all_modelinfo_caches.py
