[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "HPC LLM Instance Launcher"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
    "jinja2",
    "huggingface_hub",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["src"]
